debug controllers and swagger. Rename routes
